--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -111,4 +111,11 @@ th[htmlValue="issue"] {
 }
 
 
-
+::-moz-selection { /* Code for Firefox */
+    color: red;
+    background: yellow;
+}
+::selection {
+    color: red !important;
+    background: yellow !important;
+}
