--- a/Pages/Versions/Index.cshtml
+++ b/Pages/Versions/Index.cshtml
@@ -11,6 +11,7 @@
         min-width:80px !important;
     }
 </style>
+<link rel="stylesheet" href="~/css/hightlight.css" />
 <div class="container-fluid fs-7">
     <div class="row">
         <div class="col-2 border-1 border-ccc mr-2">
@@ -157,3 +158,4 @@
             </div>
         </div>
     </div>
+<script src="~/js/highlight.js"></script>
