--- a/wwwroot/lib/bootstrap-5.0.2-dist/css/bootstrap.css
+++ b/wwwroot/lib/bootstrap-5.0.2-dist/css/bootstrap.css
@@ -4428,12 +4428,11 @@ textarea.form-control-lg {
   background-color: #fff;
   border: 0;
   border-radius: 0;
-  overflow-anchor: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
 }
 @media (prefers-reduced-motion: reduce) {
   .accordion-button {
-    transition: none;
+    transition:  ease-in-out;
   }
 }
 .accordion-button:not(.collapsed) {
